[gd_scene load_steps=13 format=3 uid="uid://bjw4n1a8e6pcc"]

[ext_resource type="Script" uid="uid://dhhgvwx3su8gu" path="res://Enemy/bullet_enemy.gd" id="1_xafvn"]
[ext_resource type="Texture2D" uid="uid://bnl7pgwdmpw62" path="res://Art/enemy.png" id="2_ek85v"]
[ext_resource type="Texture2D" uid="uid://cwksic16jut15" path="res://Art/deathexplosion.png" id="3_6idfc"]
[ext_resource type="Script" uid="uid://m575ykd8cker" path="res://Enemy/gunlocation.gd" id="4_6idfc"]
[ext_resource type="PackedScene" uid="uid://bkad54wenqbpi" path="res://Enemy/particle.tscn" id="5_6idfc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mvqgy"]
radius = 1000.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hutav"]
radius = 70.0

[sub_resource type="CircleShape2D" id="CircleShape2D_0h1js"]
radius = 60.0

[sub_resource type="Animation" id="Animation_6idfc"]
resource_name = "new_animation"
length = 0.371
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyAnim:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.166667, 0.2, 0.233333, 0.266667, 0.3, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_mvqgy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyAnim:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hutav"]
_data = {
&"RESET": SubResource("Animation_mvqgy"),
&"WalkR": SubResource("Animation_6idfc")
}

[sub_resource type="GDScript" id="GDScript_mvqgy"]
script/source = "extends Node2D



func _process(delta: float) -> void:
	look_at(get_node(\"/root/Player\").global_position)
"

[node name="BulletEnemy" type="CharacterBody2D"]
script = ExtResource("1_xafvn")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="EnemyAnim" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(5.5, 5.5)
texture = ExtResource("2_ek85v")
hframes = 12

[node name="Explosion" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_6idfc")
hframes = 15

[node name="DetectionArea" type="Area2D" parent="."]

[node name="DetectionShape" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_mvqgy")

[node name="HurtboxArea" type="Area2D" parent="." groups=["Enemy"]]

[node name="Hurtbox" type="CollisionShape2D" parent="HurtboxArea" groups=["Enemy"]]
shape = SubResource("CircleShape2D_hutav")

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_0h1js")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hutav")
}

[node name="anchor" type="Node2D" parent="."]
script = SubResource("GDScript_mvqgy")

[node name="gunlocation" type="Node2D" parent="anchor"]
position = Vector2(-70, 0)
script = ExtResource("4_6idfc")

[node name="reload" type="Timer" parent="."]
wait_time = 0.75
one_shot = true
autostart = true

[node name="particle" parent="." instance=ExtResource("5_6idfc")]

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="area_entered" from="HurtboxArea" to="." method="_on_hurtbox_area_area_entered"]
